--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         </div>
         <div class="content">
             <p>GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
-            <p>This tutorial teaches you GitHub essentials like repositories, branches, commits, and Pull Requests. You’ll create your own Hello World repository and learn GitHub’s Pull Request workflow, a popular way to create and review code.</p>       
+            <p>This tutorial teaches you GitHub essentials like repositories, branches, commits, and Pull Requests. You’ll create your own Hello World repository and learn GitHub’s Pull Request workflow, a popular way to create and review code.</p>
+        <div>
+        <div class="footer">
+            <p>Created by: <a href="">Nikhil</a></p>   
+        </div>       
     </div>
 </body>
 </html>
